update css and index.html

--- a/index.html
+++ b/index.html
@@ -58,6 +58,17 @@
       <h2 class="color--cloud margin--none section__text--centered">
         Portfolio
       </h2>
+      <ul align="left" class="color--cloud margin--none section__text--left"> AWS Services Used:
+        <li>S3</li>
+        <li>CloudFront</li>
+        <li>Route53</li>
+        <li>DynamoDB</li>
+      </ul>
+      <ul align="left" class="color--cloud margin--none section__text--left">Other Technologies Used:
+        <li>GitHub</li>
+        <li>HTML</li>
+        <li>CSS</li>
+      </ul>
     </section>
 
     <section class="section section--alignCentered section--description">
