overhauled portfolio code

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     
-    <div class="jumbotron jumbotron-main">
+    <div class="jumbotron jumbotron-sub">
       <nav class="navbar">
       <div class="container">
         <div class="navbar-header">
@@ -35,63 +35,29 @@
     </nav>
 
       <div class="container">
-        <h1>WELCOME TO MY PORTFOLIO</h1>
-        <p class="lead">Fresh eyes for a rapidly changing industry.</p>
-        <p>
-          <a class="btn btn-primary btn-lg" href="about.html">Read More</a>
-          <a class="btn btn-default btn-lg" href="contact.html">Contact Me</a>
-        </p>
+        <h1>About Me</h1>
       </div>
     </div>
 
     <div class="container">
       <div class="row">
-        <div class="col-md-6 box">
-          <div class="well">
-            <span class="glyphicon glyphicon-hdd"></span>
-            <h3>AWS/ITIL Certified</h3>
-            <p>Currently, I hold 3 Certifications that pertain to IT service management and cloud architecture:</p>
-            <ul class="cert">
-              <li>AWS Solutions Architect Associate</li>
-              <li>AWS Cloud Practitioner</li>
-              <li>ITIL Foundation V3</li>
-            </ul>
-            
+        <div class="col-md-8">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+            <h3 class="panel-title">My Objective</h3>
           </div>
-        </div>
-        <div class="col-md-6 box">
-          <div class="well">
-            <span class="glyphicon glyphicon-user"></span>
-            <h4>Customer Service Skills</h4>
-            <p>Thanks to my years of experience in both the insurance and the education industry, I have cultivated an excellent set of communication, conflict resolution, and leadership skills. Regardless of whether its an office, a call-center, or even a classroom, these past experiences have taught me how to excell in any setting.</p>
+          <div class="panel-body">
+            <img src="img/about.jpg" class="img-full1">
             <br><br>
+            <p>I'm an aspiring IT professional with experience in sales, customer service, technology support and integration in selected business and education environments. My desire is to use IT service and support skills in conjunction with excellent communication, leadership, training and development competency to help a progressive organization expand their IT footprint and achieve business results. Interested in pursuing a continual learning path with opportunity for personal and professional growth.</p>
+          </div>
           </div>
         </div>
-      </div>
-    </div>
-
-    <div class="section-a">
-      <div class="row">
-        <div class="col-md-12">
-          <h2>"The Internet is becoming the town square for the global village of tomorrow."</h2>
-          <p>-Bill Gates</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <img class="img-full" src="img/binary.jpg">
-        </div>
-        <div class="col-md-6">
-          <h1>SEE MY CERTIFICATIONS</h1>
-          <p>Below are my currently held certifications. I plan to add many more in the future!</p>
-          <ul class="list-group">
-            <li class="list-group-item"><button type="button" class="btn btn-default"><a href="AWS-CSA.pdf" target="_blank"><span class="glyphicon glyphicon-file"></span></button></a> AWS Certified Solutions Architect Associate</li>
-            <li class="list-group-item"><button type="button" class="btn btn-default"><a href="AWS-CP.pdf" target="_blank"><span class="glyphicon glyphicon-file"></span></button></a> AWS Certified Cloud Practitioner</li>
-            <li class="list-group-item"><button type="button" class="btn btn-default"><a href="ITILV3.pdf" target="_blank"><span class="glyphicon glyphicon-file"></span></button></a> ITIL Foundation V3</li>
-          </ul>
+        <div class="col-md-4">
+          <div class="well">
+            <h3> Who I am</h3>
+            <p>Im an aspiring IT professional who's had two passions, history and IT. In 2014 I earned a Bachelor’s degree in History from Virginia State University. From 2016-2018 I worked as a US history teacher at both Peabody Middle School and Vernon Johns Middle School in Petersburg, VA. Now that I've moved to one of the IT centers of the world I've decided to take on a new challenge and pursue my other passion, IT. Over the past 8 months I've thrown myself into this constantly evolving industry, gaining certifications in both AWS and ITIL V3, with plans to pursue many more in the future. I've always love the idea of development, to create something from nothing, and I look forward to working with an employer who values innovation, challenge, and constant professional development.</p>
+          </div>
         </div>
       </div>
     </div>
